addfilterVehicle